@@ -3,3 +3,4 @@
  * Prevent random binary bug #713
  * Fix dialog background #717
  * Better domain recognition for autofill #702
+ * Write custom data #651
