@@ -3,3 +3,4 @@
  * Prévention du bug des binaires aléatoires #713
  * Correction du fond des dialogues #717
  * Meilleure reconnaissance du domaine pour l'autofill #702
+ * Ecriture des données customisées #651
