@@ -4,6 +4,7 @@ KeePassDX(2.8.6)
  * Prevent random binary bug #713
  * Fix dialog background #717
  * Better domain recognition for autofill #702
+ * Write custom data #651
 
 KeePassDX(2.8.5)
  * Fix Base 64 #708
